--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-
+    <form action="http://example.com/process-user.php" method="GET">
+      <input type="text" name="fullname"placeholder="Enter Name">
+      <input type="text" name="dog-name">
+      <input type="text" name="favorite-toy">
+      <input type="submit" value="submit">
+    </form>
 
       <!-- Add a label for 'fullname'-->
 
