--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
     <form action="http://example.com/process-user.php" method="GET">
-      <input type="text" name="fullname"placeholder="Enter Name">
-      <input type="text" name="dog-name">
-      <input type="text" name="favorite-toy">
-      <input type="submit" value="submit">
-    </form>
+  
+
+    <form >
+
+  
 
       <!-- Add a label for 'fullname'-->
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-
+  <input type="text" name="fullname"placeholder="Enter Name" required >
 
       <!-- Add a label for 'email'-->
 
@@ -47,7 +47,7 @@
 
 
       <!-- Add an input with the type set to 'submit' -->
-
+  </form>
 
   </body>
 </html>
