--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <label for="email">email</label>
+      <input type="email" id="email" name="email" placeholder="Enter Email">
 
       <!-- Add a label for 'phone'-->
 
