--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
+<label for="tel">
+<input id="phone" type="tel" name="phone" placeholder="Enter Telephone (optional)"                               >
       <!-- Add a label for 'message'-->
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
