Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-        <label for="fullname"></label>
+      <label for="fullname"></label>
       <input id="fullname" type="text" name="fullname" placeholder="Enter Name" required >
 
       <!-- Add a label for 'email'-->
@@ -36,7 +36,7 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-<label for="tel">
+<label for="phone">
 <input id="phone" type="tel" name="phone" placeholder="Enter Telephone (optional)"                               >
       <!-- Add a label for 'message'-->
 
