--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <label for="fullname"></label>
+      <label for="fullname">fullname</label>
       <input id="fullname" type="text" name="fullname" placeholder="Enter Name" required >
 
       <!-- Add a label for 'email'-->
