--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-<label for="phone">
+<label for="phone">phone</label>
 <input id="phone" type="tel" name="phone" placeholder="Enter Telephone (optional)"                               >
       <!-- Add a label for 'message'-->
 
