--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <label for="message">message</label>
+<textarea id="message" name="message" placeholder="Enter Message"</textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
